agregado metodos get
