# app/api/app/routes/tipo_sensor.py
@@ -4,6 +4,39 @@ from ..models import TipoSensor
 
 tipo_sensor_bp = Blueprint("tipo_sensor", __name__)
 
+@tipo_sensor_bp.get("/")
+def get_tipos():
+    tipos = TipoSensor.query.all()
+    data = [
+        {
+            "id": t.id,
+            "nombre": t.nombre,
+            "descripcion": t.descripcion,
+            "unidad_id": t.unidad_id,
+            "medicion_min": t.medicion_min,
+            "medicion_max": t.medicion_max
+        }
+        for t in tipos
+    ]
+    return jsonify(data), 200
+
+
+@tipo_sensor_bp.get("/<int:tipo_id>")
+def get_tipo(tipo_id):
+    t = TipoSensor.query.get(tipo_id)
+    if not t:
+        return jsonify({"error": "No existe"}), 404
+
+    return jsonify({
+        "id": t.id,
+        "nombre": t.nombre,
+        "descripcion": t.descripcion,
+        "unidad_id": t.unidad_id,
+        "medicion_min": t.medicion_min,
+        "medicion_max": t.medicion_max
+    }), 200
+
+
 @tipo_sensor_bp.post("/")
 def add_tipo():
     data = request.json
